AUX_SOURCE_DIRECTORY(./cjson SOURCE_TINKER_JSON)
AUX_SOURCE_DIRECTORY(./lua-5.3.1/src SOURCE_TINKER_LUA)

FILE(GLOB SOURCE_TINKER  ./*.h ./*.cpp)
FILE(GLOB_RECURSE JSON_HEADERS  ./cjson/*.h ./cjson/*.hpp)
FILE(GLOB_RECURSE LUA_HEADERS  ./lua-5.3.1/src/*.h ./lua-5.3.1/src/*.hpp)

SOURCE_GROUP("lua" FILES ${SOURCE_TINKER_LUA} ${LUA_HEADERS})
SOURCE_GROUP("cjson" FILES ${SOURCE_TINKER_JSON} ${JSON_HEADERS})
SOURCE_GROUP("tinker" FILES ${SOURCE_TINKER} )

ADD_LIBRARY(luatinker STATIC ${SOURCE_TINKER} ${SOURCE_TINKER_JSON} ${SOURCE_TINKER_LUA} ${LUA_HEADERS}  ${JSON_HEADERS})